library now scales correctly over everything on mobile devices. button disappears though and needs fixed.

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -1,18 +1,36 @@
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(155,155,155,0.5) transparent;
+}
+
+/* The emerging W3C standard
+   that is currently Firefox-only */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(155, 155, 155, 0.7) transparent;
+}
+
 .library {
+    background: white;
+    border-radius: 1rem;
+    box-shadow: 2px 2px 50px rgb(201, 201, 201);
+    height: 100%;
+    left: 0;
+    opacity:0;
+    overflow: scroll;
     position: fixed;
     top: 0;
-    left: 0;
-    width: 20rem;
-    height: 100%;
-    background: white;
-    box-shadow: 2px 2px 50px rgb(201, 201, 201);
-    overflow: scroll;
     transform: translateX(-100%);
     transition: all 0.5s ease;
-    opacity:0;
+    width: 20rem;
+
     h2 {
         padding: 2rem;
     }
+}
+
+.library-active {
+    opacity: 1;
 }
 
 .library-songs {
@@ -20,7 +38,7 @@
     cursor: pointer;
     display: flex;
     padding: 1rem 2rem 1rem 2rem;
-    transition: background 0.5s ease;
+    transition: all 0.75s ease-out;
     
     img{
         width: 30%;
@@ -29,6 +47,10 @@
     &:hover {
         background: rgb(240, 240, 240);
     }
+}
+
+.selected {
+    background: rgb(146, 190, 255);
 }
 
 .song-description {
@@ -41,18 +63,6 @@
     }
 }
 
-* {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(155,155,155,0.5) transparent;
-}
-
-/* The emerging W3C standard
-   that is currently Firefox-only */
-* {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(155, 155, 155, 0.7) transparent;
-}
-  
   /* Works on Chrome/Edge/Safari */
   *::-webkit-scrollbar {
     width: 5px;
@@ -67,17 +77,16 @@
     border-radius: 20px;
     border: transparent;
 }
-
-.selected {
-    background: rgb(146, 190, 255);
-}
-
-.library-active {
-    opacity:1;
-}
-
+//! Media Screen Styles
+// .library-active sidebar should come in from the left and go over the main content.
 @media screen and (max-width: 768px) {
     .library {
         width: 100%;
+    }
+    
+    .library-active {
+        left: 0;
+        width: 100vw;
+        z-index: 5;
     }
 }
